--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+}
+
 body{
-    background-color: rgb(230, 225, 225);
+    background-color: rgba(230, 225, 225, 0.384);
     margin: 0;
 }
 
@@ -9,17 +14,86 @@ body{
 
 .logo{
     vertical-align: middle;
+    margin: 10px 0 10px 10px;
 }
 
 h1{
     display: inline-block;
     vertical-align: middle;
+    font-size: 45px;
+    margin: 0;
 }
 
 .contain1{
     width: 80%;
     background-color: white;
-    height: 60px;
+    height: 55px;
     margin: 10%;
     margin-top: 3%;
+    padding: 1%;
+    margin-bottom: 5px;
+}
+
+.task{
+    display: inline-block;
+    background-color: #46adf2;
+    margin: 2%;
+    margin-right: 1px;
+    margin-left: 5%;
+    margin-top: 0;
+    color: white;
+    border-radius: 5px;
+    padding: 6px;
+}
+
+.selection{
+    display: inline-block;
+    background-color: white;
+    margin: 2%;
+    margin-left: 5px;
+    margin-top: 0;
+    color: #bbc0c3;
+    border: 1px solid #b8bdc0;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.contain2{
+    width: 80%;
+    background-color: white;
+    height: 800px;
+    margin-left: 10%;
+    margin-right: 10%;
+    padding: 2% 2% 2% 4%;
+}
+
+h2{
+    margin-top: 3%;
+}
+
+.sfera{
+    height: 15px;
+    width: 15px;
+    display: inline-block;
+    vertical-align: middle;
+    border-radius: 50%;
+    border: 2px solid #a6ded2;
+    text-align: justify;
+}
+
+p{
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 1%;
+    font-size: 20px;
+}
+
+.rettangolo{
+    display: inline-block;
+    background-color: #46adf2;
+    color: white;
+    font-size: 10px;
+    padding: 8px;
+    border-radius: 35%;
+
 }
