--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ h1{
     height: 800px;
     margin-left: 10%;
     margin-right: 10%;
-    padding: 2% 2% 2% 4%;
+    padding: 1% 2% 2% 4%;
 }
 
 h2{
@@ -95,5 +95,59 @@ p{
     font-size: 10px;
     padding: 8px;
     border-radius: 35%;
+}
 
+.sfera2{
+    height: 15px;
+    width: 15px;
+    display: inline-block;
+    vertical-align: middle;
+    border-radius: 50%;
+    border: 2px solid red;
+    text-align: justify;
+}
+
+.rettangolo2{
+    display: inline-block;
+    background-color: #9665eb;
+    color: white;
+    font-size: 10px;
+    padding: 8px;
+    border-radius: 35%;
+}
+
+.rettangolo3{
+    display: inline-block;
+    background-color: #63bfa7;
+    color: white;
+    font-size: 10px;
+    padding: 8px;
+    border-radius: 35%;
+}
+
+.rettangolo4{
+    display: inline-block;
+    background-color: #f29f33;
+    color: white;
+    font-size: 10px;
+    padding: 8px;
+    border-radius: 35%;
+}
+
+.rettangolo5{
+    display: inline-block;
+    background-color: #d964a0;
+    color: white;
+    font-size: 10px;
+    padding: 8px;
+    border-radius: 35%;
+}
+
+.rettangolo6{
+    display: inline-block;
+    background-color: #b1c926;
+    color: white;
+    font-size: 10px;
+    padding: 8px;
+    border-radius: 35%;
 }
