--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    background-color: rgba(230, 225, 225, 0.384);
+    background-color: rgba(228, 224, 224, 0.366);
     margin: 0;
 }
 
@@ -22,6 +22,7 @@ h1{
     vertical-align: middle;
     font-size: 45px;
     margin: 0;
+    font-family: sans-serif;
 }
 
 .contain1{
@@ -69,6 +70,7 @@ h1{
 
 h2{
     margin-top: 3%;
+    font-family: sans-serif;
 }
 
 .sfera{
@@ -78,7 +80,8 @@ h2{
     vertical-align: middle;
     border-radius: 50%;
     border: 2px solid #a6ded2;
-    text-align: justify;
+    font-size: x-small;
+    color: #a6ded2;
 }
 
 p{
@@ -104,7 +107,8 @@ p{
     vertical-align: middle;
     border-radius: 50%;
     border: 2px solid red;
-    text-align: justify;
+    font-size: x-small;
+    color: red;
 }
 
 .rettangolo2{
