--- a/style.css
+++ b/style.css
@@ -29,19 +29,14 @@ h1{
     width: 80%;
     background-color: white;
     height: 55px;
-    margin: 10%;
-    margin-top: 3%;
+    margin: 5% 10% 0.5% 10%;
     padding: 1%;
-    margin-bottom: 5px;
+    padding-left: 5%;
 }
 
 .task{
     display: inline-block;
     background-color: #46adf2;
-    margin: 2%;
-    margin-right: 1px;
-    margin-left: 5%;
-    margin-top: 0;
     color: white;
     border-radius: 5px;
     padding: 6px;
@@ -50,9 +45,6 @@ h1{
 .selection{
     display: inline-block;
     background-color: white;
-    margin: 2%;
-    margin-left: 5px;
-    margin-top: 0;
     color: #bbc0c3;
     border: 1px solid #b8bdc0;
     border-radius: 5px;
